Updates to JS to include for loop - now working - and a second eventful API call - currently not working

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                </div>
                <div class="form-group">
                  <label for="comment">Interests</label>
-                 <input type="text" class="form-control" id="interest-input" value="blues">
+                 <input type="text" class="form-control" id="interest-input" value="theater">
                </div> 
                <button type="submit" class="btn btn-primary" id="findEvent">Submit</button>
           </form>
@@ -216,16 +216,28 @@
     <button type="submit" id="findEvent">Submit</button> -->
 
 
-    <div class="resultcontainer">
+    <div class="event-results-container">
       
       <div class="panel panel-primary">
          <div class="panel-heading">
-              <h3 class="panel-title">Results</h3>
+              <h3 class="panel-title">Event Results</h3>
          </div>
          <div class="panel-body" id="event-results">
 
          </div>  
     </div> 
+
+    <div class="event-detail-container">
+      
+      <div class="panel panel-primary">
+         <div class="panel-heading">
+              <h3 class="panel-title">Event Details</h3>
+         </div>
+         <div class="panel-body" id="event-detail">
+
+         </div>  
+    </div> 
+
 
     </div>
 
