--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
                         <div class="col-md-6">
                           <div class="form-group">
                               <label for="fOrigin">Origin *</label>
-                              <input id="fOrigin" type="text" name="origin" class="form-control" placeholder="Please enter your Origin *" required="required" data-error="Origin is required.">
+                              <input id="fOrigin" type="text" name="origin" class="form-control" placeholder="eg: SFO *" required="required" data-error="Origin is required.">
                               <div class="help-block with-errors"></div>
                           </div>
                         </div>
                         <div class="col-md-6">
                           <div class="form-group">
                               <label for="fDestination">Destination *</label>
-                              <input id="fDestination" type="text" name="destination" class="form-control" placeholder="Please enter your destination *" required="required" data-error="Destination is required.">
+                              <input id="fDestination" type="text" name="destination" class="form-control" placeholder="eg: LAX *" required="required" data-error="Destination is required.">
                               <div class="help-block with-errors"></div>
                           </div>
                         </div>
@@ -200,14 +200,14 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="departingDate">Departing date *</label>
-                                <input id="departingDate" type="date" name="departingDate" class="form-control" placeholder="Please enter your departure date *"  required="required" data-error="Departure date is required.">
+                                <input id="departingDate" type="text" name="departingDate" class="form-control" placeholder="YYYY-MM-DD *"  required="required" data-error="Departure date is required.">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="returningDate">Returning date *</label>
-                                <input id="returningDate" type="date" name="returningDate" class="form-control" placeholder="Please enter your departure date *"  required="required" data-error="Departure date is required.">
+                                <input id="returningDate" type="text" name="returningDate" class="form-control" placeholder="YYYY-MM-DD *"  required="required" data-error="Departure date is required.">
                                 
                                 <div class="help-block with-errors"></div>
                             </div>
