--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact" data-sr-id="10" style="; visibility: visible;  -webkit-transform: scale(0.3); opacity: 0;transform: scale(0.3); opacity: 0;"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@strvl.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">feedback@travl.com</a></p>
                 </div>
             </div>
         </div>
